tests/baselines/reference/objectLiteralFreshnessWithSpread(strict=true).errors.txt
objectLiteralFreshnessWithSpread.ts(2,11): error TS7008: Member 'a' implicitly has an 'any' type.
objectLiteralFreshnessWithSpread.ts(2,14): error TS7008: Member 'b' implicitly has an 'any' type.
objectLiteralFreshnessWithSpread.ts(2,35): error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ a: any; b: any; }'.


==== objectLiteralFreshnessWithSpread.ts (3 errors) ====
    let x = { b: 1, extra: 2 }
    let xx: { a, b }  = { a: 1, ...x, z: 3 } // error for 'z', no error for 'extra'
              ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
                 ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
                                      ~
!!! error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ a: any; b: any; }'.
    